2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-python-module.c
	(totem_python_module_init_python), (totem_python_module_load):
	* src/plugins/totem-python-plugin.c (call_python_method),
	(check_py_object_is_gtk_widget), (totem_python_object_init),
	(totem_python_object_get_type): Patch from Tim-Philipp Müller
	<tim.muller@collabora.co.uk>, Prepare python for use from multiple
	threads and add missing locking where applicable
	(Closes: #554868)

2008-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-missing-plugins.c
	(bacon_video_widget_gst_get_toplevel): Fix getting the
	top-level window when the video widget isn't inside a
	GtkPlug

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (totem_embedded_set_uri):
	Fix a crash when emptying the playlist on Solaris machines
	(Closes: #552462)

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c (totem_sidebar_toggle),
	(totem_sidebar_setup):
	* src/totem.c (totem_callback_connect): Make the sidebar arrow
	face right when closed, and face left when opened, showing the
	movement the sidebar would take, place the arrow to the right
	of the label (and vice-versa for RTL languages)

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem.c (update_mrl_label): Use "Movie Player", and
	not "Totem Movie Player" in the UI

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_set_reorderable),
	(totem_playlist_foreach_selected), (playlist_remove_files),
	(totem_playlist_move_files), (totem_playlist_file_changed),
	(totem_playlist_clear_with_compare): Clean up, and use only
	one codepath to remove files, whether selected files, or
	files matching a certain criteria.
	Should fix playlist weirdness when removing deleted files
	from the playlist (Closes: #550225)

2008-09-29  Christian Persch  <chpe@gnome.org>
