@@ -1,5 +1,11 @@
 2008-10-07  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/youtube/youtube.py: Patch from Edward Hervey
+	<bilboed@gmail.com> to fix the threading in the youtube plugin
+	(Closes: #548879)
+
+2008-10-07  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plugins/totem-python-module.c
 	(totem_python_module_init_python), (totem_python_module_load):
 	* src/plugins/totem-python-plugin.c (call_python_method),
